--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-plugin-styled-components": "^5.1.0",
     "gatsby-source-filesystem": "^4.1.0",
     "gatsby-transformer-remark": "^5.1.0",
+    "pure-react-carousel": "^1.27.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "styled-components": "^5.3.3"
