--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-plugin-styled-components": "^1.13.3",
     "framer-motion": "^5.2.1",
     "gatsby": "^4.1.0",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^4.1.0",
     "gatsby-plugin-mdx": "^3.1.0",
     "gatsby-plugin-styled-components": "^5.1.0",
