--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "aos": "^2.3.4",
     "babel-plugin-styled-components": "^1.13.3",
     "framer-motion": "^5.2.1",
     "gatsby": "^4.1.0",
