--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gatsby-transformer-remark": "^5.1.0",
     "pure-react-carousel": "^1.27.6",
     "react": "^17.0.1",
+    "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.1",
     "react-lorem-ipsum": "^1.4.9",
     "react-router-dom": "^6.0.1",
