--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "babel-plugin-styled-components": "^1.13.3",
     "framer-motion": "^5.2.1",
     "gatsby": "^4.1.0",
+    "gatsby-image": "^3.11.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^4.1.0",
     "gatsby-plugin-mdx": "^3.1.0",
+    "gatsby-plugin-sharp": "^4.1.2",
     "gatsby-plugin-styled-components": "^5.1.0",
     "gatsby-source-filesystem": "^4.1.0",
     "gatsby-transformer-remark": "^5.1.0",
